--- a/app/pom.xml
+++ b/app/pom.xml
@@ -82,6 +82,7 @@
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
