adding revisionHistoryLimit to 1 instead of default 10 for appserver deployment

--- a/kube-deploy.dev-cluster.yaml
+++ b/kube-deploy.dev-cluster.yaml
@@ -21,6 +21,7 @@ spec:
         com.docker.service.id: atsea-appserver
         com.docker.service.name: appserver
         com.docker.stack.namespace: atsea
+    revisionHistoryLimit: 1
     strategy:
       rollingUpdate:
         maxSurge: 1
