--- a/kube-deploy.dev-cluster.yaml
+++ b/kube-deploy.dev-cluster.yaml
@@ -37,6 +37,13 @@ spec:
         containers:
         - image: dtr.west.us.se.dckr.org/derrick.miller-dev/atsea-appserver:demo-vulnerable
           name: appserver
+          resources:
+            requests:
+              memory: "2Gi"
+              cpu: "250m"
+            limits:
+              memory: "3Gi"
+              cpu: "500m"
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 8080
@@ -44,6 +51,7 @@ spec:
           - containerPort: 5005
             protocol: TCP
         restartPolicy: Always
+        
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -81,6 +89,13 @@ spec:
         image: dtr.west.us.se.dckr.org/derrick.miller-dev/atsea-database:demo-v1
         imagePullPolicy: IfNotPresent
         name: database
+        resources:
+            requests:
+              memory: "2Gi"
+              cpu: "250m"
+            limits:
+              memory: "3Gi"
+              cpu: "500m"
         ports:
         - containerPort: 5432
           protocol: TCP
@@ -149,7 +164,7 @@ metadata:
   name: atsea-ingress
 spec:
   rules:
-  - host: atsea-dev.kube.west.us.se.dckr.org
+  - host: atsea-dev-nico.kube.west.us.se.dckr.org
     http:
       paths:
       - backend:
