--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres
+FROM dtr.west.us.se.dckr.org/official/postgres:latest
 
 # Copy the database initialize script: 
 # Contents of /docker-entrypoint-initdb.d are run on startup
